haproxy/namespace.yaml
apiVersion: v1                      
kind: Namespace
metadata:
  name: pacman-app-lb
