haproxy/pacman-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pacman-app-lb
  namespace: pacman-app
  labels:
    app.kubernetes.io/name: pacman-app
spec:
  path: "/"
  to:
    kind: Service
    name: pacman-app
  subdomain: pacman-app
